# rust-u2f

./: .bumpversion.cfg  .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.debian  Dockerfile.fedora  LICENSE-MIT  Makefile  README.md  TODO.md  build.rs  package.sh  softu2f.spec
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cargo.yml
ctap-hid/: Cargo.toml  README.md
ctap-hid/src/: api.rs  channel.rs  lib.rs  packet.rs  protocol.rs  request.rs  response.rs  server.rs
ctap-hid/src/u2f/: app_id.rs  application_key.rs  attestation.rs  constants.rs  key_handle.rs  known_app_ids.rs  mod.rs  private_key.rs  public_key.rs  request.rs  response.rs  self_signed_attestation.rs
ctaphid/: Cargo.toml  README.md
ctaphid-protocol/: Cargo.toml  README.md
ctaphid-protocol/src/: api.rs  commands.rs  lib.rs  packets.rs  protocol_state_machine.rs  server.rs
ctaphid/src/: api.rs  channel.rs  lib.rs  message.rs  packet.rs  protocol.rs  server.rs
debian/: README  changelog  control  copyright
example/: Cargo.toml
example/src/: main.rs
fido2-api/: Cargo.toml
fido2-api/src/: api.rs  ctap2.rs  lib.rs  status_code.rs  webauthn.rs
fido2-authenticator-api/: Cargo.toml
fido2-authenticator-api/src/: ctap2.rs  lib.rs  status_code.rs  webauthn.rs
fido2-authenticator-service/: Cargo.toml
fido2-service/: Cargo.toml
fido2-service/src/: authenticator.rs  crypto.rs  lib.rs  secrets.rs  serde_base64.rs  service.rs  storage.rs
linux/: Cargo.toml  Dockerfile  Makefile  softu2f.spec
linux-uhid-sys/: Cargo.toml  wrapper.h
linux/system-daemon/: Cargo.toml  Makefile  softu2f-system-daemon.spec  softu2f.service
linux/system-daemon/selinux-policy/: Makefile  softu2f-system-daemon-selinux.8  softu2f-system-daemon-selinux.spec  softu2f-system-daemon.fc  softu2f-system-daemon.if  softu2f-system-daemon.sh  softu2f-system-daemon.te
linux/system-daemon/src/: bidirectional_pipe.rs  codec.rs  connection.rs  definitions.rs  device.rs  lib.rs  main.rs  socket_server.rs
linux/test-authenticator/: Cargo.toml
linux/test-authenticator/src/: main.rs
linux/uhid-tokio/: Cargo.toml
linux/uhid-tokio/example/: Cargo.toml
linux/uhid-tokio/example/src/: main.rs
linux/uhid-tokio/src/: character_device.rs  character_device_file.rs  codec.rs  event_framed.rs  lib.rs  misc_driver.rs  poll_evented_read_wrapper.rs  transport.rs  uhid_codec.rs  uhid_device.rs  uhid_device_file.rs
linux/uhid-tokio/test/: generate-uhid-requests.c
linux/user-daemon/: Cargo.toml  Makefile  softu2f-user-daemon.spec  softu2f.preset  softu2f.service
linux/user-daemon/maintainer-scripts/: postinst
linux/user-daemon/src/: TODO.md  atomic_file.rs  config.rs  file_store.rs  main.rs  storage.rs  user_presence.rs
linux/user-daemon/src/key_store/: keyring.rs  mod.rs
linux/user-daemon/src/key_stores/: keyring.rs  mod.rs
linux/user-daemon/src/secret_store/: file_store.rs  file_store_v2.rs  mod.rs  secret_service_api.rs  secret_service_api2.rs  secret_service_store.rs
linux/user-daemon/src/stores/: file.rs  file_store.rs  file_store_v2.rs  mod.rs  secret_service.rs  secret_service_store.rs
session-daemon/: Cargo.toml
softu2f-bin/: Cargo.toml  README.md
softu2f-bin/src/: file_storage.rs  main.rs  stdin_stream.rs  user_file_storage.rs  user_presence.rs
softu2f-test-user-presence/: Cargo.toml
softu2f-test-user-presence/src/: lib.rs  main.rs
src/: lib.rs  poll_evented_read.rs  poll_evented_read_wrapper.rs  raw_device.rs  raw_device_file.rs  uhid_codec.rs  uhid_device.rs
system-daemon/: Cargo.toml  Makefile  softu2f-system-daemon.spec  softu2f.preset  softu2f.service  softu2f.socket
system-daemon/maintainer-scripts/: postinst  prerm
system-daemon/protos/: socket.proto
system-daemon/selinux-policy/: Makefile  softu2f-system-daemon-selinux.spec  softu2f-system-daemon.fc  softu2f-system-daemon.te
system-daemon/src/: bidirectional_pipe.rs  definitions.rs  device.rs  main.rs
systemd-daemon/: Cargo.toml  Makefile  build.rs  softu2f-systemd-daemon.spec  softu2f-tmpfiles.conf  softu2f.service  softu2f_systemd_daemon.fc  softu2f_systemd_daemon.if  softu2f_systemd_daemon.pp  softu2f_systemd_daemon.sh  softu2f_systemd_daemon.te  softu2f_systemd_daemon_selinux.8  softu2f_systemd_daemon_selinux.spec
systemd-daemon/selinux-policy/: Makefile  softu2f-systemd-daemon-selinux.8  softu2f-systemd-daemon-selinux.spec  softu2f-systemd-daemon.fc  softu2f-systemd-daemon.if  softu2f-systemd-daemon.pp  softu2f-systemd-daemon.sh  softu2f-systemd-daemon.te
systemd-daemon/src/: definitions.rs  device.rs  lib.rs  main.rs  proto.rs  sequential_stream.rs
systemd-daemon/tmpfiles/: softu2f.conf
u2f-core/: Cargo.toml
u2f-core/src/: app_id.rs  application_key.rs  attestation.rs  constants.rs  key.rs  key_handle.rs  known_app_ids.rs  known_facets.rs  lib.rs  openssl_crypto.rs  private_key.rs  public_key.rs  request.rs  response.rs  self_signed_attestation.rs  self_signed_attestation_certificate.rs  serde_base64.rs
u2f-header/: Cargo.toml
u2f-message-format-header/: Cargo.toml  build.rs
u2f-tokio/: Cargo.toml
u2fhid-protocol/: Cargo.toml
u2fhid-protocol/src/: definitions.rs  framed.rs  lib.rs  protocol.rs  protocol_state_machine.rs  segmenting_sink.rs  send_all.rs  server.rs
u2fhid-protocol/src/segmented_multichannel/: advanced.rs  frame.rs  mod.rs  server.rs  transport.rs
u2fhid-transport/: Cargo.toml
u2fhid-transport-header/: Cargo.toml  build.rs  u2f_hid.h
u2fhid-transport/src/: buffer_one.rs  definitions.rs  lib.rs  protocol_state_machine.rs  segmenting_sink.rs
uhid-bindings/: Cargo.toml  build.rs
uhid-linux-sys/: Cargo.toml
uhid-linux-tokio/: Cargo.toml
uhid-linux-tokio/example/src/: main.rs
uhid-linux-tokio/src/: character_device.rs  character_device_file.rs  lib.rs  raw_device.rs  raw_device_file.rs  uhid_codec.rs  uhid_device.rs
user-daemon/: Cargo.toml  Makefile  softu2f-user-daemon.spec
user-daemon/maintainer-scripts/: prerm
user-daemon/src/: file_storage.rs  file_store.rs  main.rs  user_presence.rs
(+21 files in other folders)
