[workspace]
members = [
    "ctaphid-protocol",
    "fido2-authenticator-api",
    "fido2-authenticator-service",
    "linux/uhid-sys",
    "linux/uhid-tokio",
    "linux/uhid-tokio/example",
    "linux/user-daemon",
    "linux/system-daemon",
    "linux/test-authenticator",
    "u2f-core",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = 'abort'
strip = true
