[workspace]
members = [
    "ctap-hid",
    "fido2-api",
    "fido2-service",
    "linux/uhid-sys",
    "linux/uhid-tokio",
    "linux/uhid-tokio/example",
    "linux/user-daemon",
    "linux/system-daemon",
    "linux/test-authenticator",
]

# Reduce binary size to reduce RSS at runtime: https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
