[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "ctap-hid"
version = "0.4.2"
edition = "2021"

[dependencies]
async-trait = "0.1.0"
bitflags = "^1.1.0"
byteorder = "^1.3.2"
futures = "^0.3.17"
itertools = "^0.10.1"
lazy_static = "1.4.0"
pin-project = "^1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "^1.0"
tokio = { version = "^1.13.0", features = ["rt", "macros"] }
tokio-tower = "^0.6.0"
tracing = "^0.1"

[dependencies.fido2-authenticator-api]
path = "../fido2-authenticator-api"

[dev-dependencies]
rand = "0.8.4"
tokio = "1.13.0"
tokio-stream = "0.1.8"
