[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "ctap-hid"
version = "0.5.0"
edition = "2021"

[dependencies]
async-trait = "0.1.0"
base64 = "^0.13.0"
bitflags = "^1.1.0"
byteorder = "^1.3.2"
futures = "^0.3.17"
itertools = "^0.10.1"
lazy_static = "1.4.0"
pin-project = "^1.0"
ring = "^0.16.7"
serde = { version = "1.0", features = ["derive"] }
subtle = "^2.1.1"
thiserror = "^1.0"
tokio = { version = "^1.13.0", features = ["rt", "macros"] }
tokio-tower = "^0.6.0"
tracing = "^0.1"
openssl = "^0.10.24"
rand = "^0.8.4"

[dependencies.fido2-api]
path = "../fido2-api"

[dev-dependencies]
tokio = "1.13.0"
tokio-stream = "0.1.8"
