[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "fido2-service"
version = "0.5.0"
edition = "2021"

[dependencies]
assert_matches = "^1.3.0"
async-trait = "^0.1.51"
base64 = "^0.13.0"
byteorder = "^1.3.2"
futures = "^0.3.17"
hex = "^0.4.3"
lazy_static = "^1.3.0"
openssl = "^0.10.24"
pkg-version = "^1.0.0"
rand = "^0.8.4"
ring = { version = "^0.16.7", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.0.1", features = ["base64"] }
subtle = "^2.1.1"
thiserror = "^1.0"
tokio = { version = "^1.13.0", features = ["rt", "macros"] }
tracing = "^0.1"
uuid = "^1.0"

[dependencies.fido2-api]
path = "../fido2-api"
