[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "softu2f"
version = "0.1.0"

[dependencies]
futures = "0.1.16"
libc = "0.2.31"
rprompt = "1.0.3"
sandbox-ipc = "0.2.0"
serde = "1.0.17"
serde_derive = "1.0.17"
serde_json = "1.0.5"
slog = "2.0.12"
slog-term = "2.2.0"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-service = "0.1.0"
users = "0.6.0"

[dependencies.softu2f-test-user-presence]
path = "../softu2f-test-user-presence"

[dependencies.u2f-core]
path = "../u2f-core"

[dependencies.u2fhid-protocol]
path = "../u2fhid-protocol"

[dependencies.uhid-linux-tokio]
path = "../uhid-linux-tokio"
