[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "softu2f-system-daemon"
version = "0.2.0"
description = "System daemon for U2F device simulated in software"

[build-dependencies]
protoc-rust = "1.4.2"

[dependencies]
bincode = "0.9.2"
bytes = "0.4.5"
futures = "0.1.16"
libc = "0.2.35"
serde = "1.0.27"
serde_derive = "1.0.27"
slog = "2.0.12"
slog-journald = "2.0.0"
slog-term = "2.3.0"
systemd = "~0.2"
take_mut = "0.2.0"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-serde-bincode = "0.1.1"
tokio-uds = "0.1.7"

[dependencies.u2fhid-protocol]
path = "../u2fhid-protocol/"

[dependencies.uhid-linux-tokio]
path = "../uhid-linux-tokio"

[[bin]]
name = "softu2f-system-daemon"
path = "src/main.rs"
doc = false

[lib]
name = "softu2f_system_daemon"
path = "src/lib.rs"

[package.metadata.deb]
depends = "$auto, systemd, u2f-hidraw-policy"
extended-description = """\
A systemd daemon that provides a socket interface for unprivileged \
users to create emulated U2F devices."""
assets = [
    ["softu2f.service", "usr/lib/systemd/system/", "644"],
    ["softu2f.socket",  "usr/lib/systemd/system/", "644"],
    ["softu2f.preset", "usr/lib/systemd/system-preset/95-softu2f.preset", "644"],
    ["softu2f-tmpfiles.conf", "usr/lib/tmpfiles.d/softu2f.conf", "644"],
    ["../target/release/softu2f-system-daemon", "usr/libexec/softu2f/system-daemon", "755"]
]
maintainer-scripts = "maintainer-scripts"

