[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "softu2f-systemd-daemon"
version = "0.1.0"
[[bin]]
name = "softu2f-systemd-daemon"
path = "src/main.rs"

[build-dependencies]
protoc-rust = "1.4.2"

[dependencies]
bincode = "0.9.2"
bytes = "0.4.5"
futures = "0.1.16"
libc = "0.2.31"
serde = "1.0.17"
serde_derive = "1.0.17"
slog = "2.0.12"
slog-journald = "2.0.0"
slog-term = "2.3.0"
systemd = "0.2.0"
take_mut = "0.2.0"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-serde-bincode = "0.1.1"
tokio-uds = "0.1.7"

[dependencies.u2fhid-protocol]
path = "../u2fhid-protocol/"

[dependencies.uhid-linux-tokio]
path = "../uhid-linux-tokio"

[lib]
name = "softu2f_systemd_daemon"
path = "src/lib.rs"
