[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "u2f-core"
version = "0.4.0"
[dependencies]
assert_matches = "1.3.0"
base64 = "0.10.1"
byteorder = "1.3.2"
futures = "0.1.28"
hex = "0.3.2"
lazy_static = "1.3.0"
openssl = "0.10.24"
quick-error = "1.2.2"
rand = "0.7.0"
ring = "0.16.7"
serde = "1.0.99"
serde_derive = "1.0.99"
slog-stdlog = "4.0.0"
subtle = "2.1.1"
tokio-service = "0.1.0"

[dependencies.slog]
version = "2.5.2"
