[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "u2f-core"
version = "0.4.2"
edition = "2021"

[dependencies]
assert_matches = "^1.3.0"
async-trait = "^0.1.51"
base64 = "^0.13.0"
byteorder = "^1.3.2"
futures = "^0.3.17"
hex = "^0.4.3"
lazy_static = "^1.3.0"
openssl = "^0.10.48"
pkg-version = "^1.0.0"
rand = "^0.8.4"
ring = "^0.16.7"
serde = "^1.0.99"
serde_derive = "^1.0.99"
subtle = "^2.1.1"
thiserror = "^1.0"
tokio = { version = "^1.13.0", features = ["rt", "macros"] }
tower = "^0.4.10"
tracing = "^0.1"
