[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "u2fhid-protocol"
version = "0.2.0"

[dependencies]
bitflags = "1.0.1"
byteorder = "1.2.2"
futures = "0.1.20"
itertools = "0.7.8"
serde = "1.0.36"
serde_derive = "1.0.36"
slog = "2.2.3"
slog-stdlog = "3.0.2"
tokio-core = "0.1.16"
quick-error = "1.2.1"

[dependencies.u2f-core]
path = "../u2f-core"

[dev-dependencies]
rand = "0.4.2"
