[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "u2fhid-protocol"
version = "0.4.2"

[dependencies]
bitflags = "1.1.0"
byteorder = "1.3.2"
futures = "0.1.28"
itertools = "0.10.1"
serde = "1.0.99"
serde_derive = "1.0.99"
slog = "2.5.2"
slog-stdlog = "4.0.0"
tokio-core = "0.1.17"
quick-error = "2.0.1"

[dependencies.u2f-core]
path = "../u2f-core"

[dev-dependencies]
rand = "0.8.4"
