[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "u2fhid-transport"
version = "0.1.0"
[dependencies]
bitflags = "1.0.0"
byteorder = "1.1.0"
futures = "0.1.16"

[dependencies.u2f-core]
path = "../u2f-core"

[dependencies.u2fhid-transport-header]
path = "../u2fhid-transport-header"

[dev-dependencies]
rand = "0.3.17"
