[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "uhid-linux-tokio"
version = "0.1.0"
[dependencies]
bitflags = "1.0.0"
bytes = "0.4.5"
futures = "0.1.15"
mio = "0.6.10"
nix = "0.9.0"
quick-error = "1.2.1"
slog = "2.0.12"
slog-stdlog = "3.0.2"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-proto = "0.1.1"

[dependencies.uhid-linux-sys]
path = "../uhid-linux-sys"
