[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "softu2f-user-daemon"
version = "0.1.0"
[dependencies]
futures = "0.1.17"
futures-cpupool = "0.1.7"
lazy_static = "1.0.0"
notify-rust = "3.4.2"
serde = "1.0.23"
serde_derive = "1.0.23"
serde_json = "1.0.7"
slog = "2.0.12"
slog-term = "2.3.0"
time = "0.1.38"
tokio-core = "0.1.10"
tokio-io = "0.1.4"
tokio-serde-bincode = "0.1.1"
tokio-uds = "0.1.7"

[dependencies.softu2f-system-daemon]
path = "../system-daemon"

[dependencies.u2f-core]
path = "../u2f-core"

[dependencies.u2fhid-protocol]
path = "../u2fhid-protocol"
