[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
description = "System daemon for emulating U2F devices"
name = "softu2f-system-daemon"
version = "0.3.2"

[build-dependencies]
protoc-rust = "1.7.5"

[dependencies]
bincode = "1.1.4"
bytes = "0.4.12"
clap = "2.33.0"
futures = "0.1.28"
hostname = "0.1.5"
libc = "0.2.62"
nanoid = "0.2.0"
serde = "1.0.99"
serde_derive = "1.0.99"
slog = { version = "2.5.2", features = ["max_level_trace" ] }
slog-journald = "2.0.0"
slog-term = "2.4.1"
systemd = "0.4.0"
take_mut = "0.2.2"
tokio = "0.1.22"
tokio-codec = "0.1"
tokio-core = "0.1.17"
tokio-io = "0.1.12"
tokio-serde-bincode = "0.2.1"
tokio-uds = "0.2.5"
users = "0.9.1"
quick-error = "1.2.1"

[dependencies.tokio-linux-uhid]
path = "../uhid-tokio"

[dependencies.u2fhid-protocol]
path = "../../u2fhid-protocol/"

[[bin]]
doc = false
name = "softu2f-system-daemon"
path = "src/main.rs"
[lib]
name = "softu2f_system_daemon"
path = "src/lib.rs"

[package.metadata.deb]
assets = [
    ["softu2f.service", "usr/lib/systemd/system/", "644"],
    ["softu2f.socket", "usr/lib/systemd/system/", "644"],
    ["softu2f.preset", "usr/lib/systemd/system-preset/95-softu2f.preset", "644"],
    ["softu2f-tmpfiles.conf", "usr/lib/tmpfiles.d/softu2f.conf", "644"],
    ["../target/release/softu2f-system-daemon", "usr/libexec/softu2f/system-daemon", "755"]
]
depends = "$auto, systemd, u2f-hidraw-policy"
extended-description = """Provides a socket interface for unprivileged users to create emulated Universal 2nd Factor
devices. By default expects to be run via systemd as root and passed a socket file-descriptor to listen on."""
maintainer-scripts = "maintainer-scripts"
