[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
description = "System daemon for emulating U2F devices"
name = "softu2f-system-daemon"
version = "0.4.2"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = "1.1.0"
clap = "4.4.2"
futures = "0.3.17"
hostname = "0.3.1"
libc = "0.2.62"
libsystemd = "0.6"
nanoid = "0.4.0"
pin-project = "1.0"
serde = "1.0.99"
serde_derive = "1.0.99"
take_mut = "0.2.2"
thiserror = "1.0"
tokio = { version = "1.13.0", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-util = { version = "0.7.1", features = ["full"] }
tower = "0.4"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
users = "0.11"

[dependencies.tokio-linux-uhid]
path = "../uhid-tokio"

[dependencies.u2fhid-protocol]
path = "../../u2fhid-protocol"

[[bin]]
doc = false
name = "softu2f-system-daemon"
path = "src/main.rs"
[lib]
name = "softu2f_system_daemon"
path = "src/lib.rs"

[package.metadata.deb]
assets = [
    ["softu2f.service", "usr/lib/systemd/system/", "644"],
    ["softu2f.socket", "usr/lib/systemd/system/", "644"],
    ["softu2f.preset", "usr/lib/systemd/system-preset/95-softu2f.preset", "644"],
    ["softu2f-tmpfiles.conf", "usr/lib/tmpfiles.d/softu2f.conf", "644"],
    ["../../target/release/softu2f-system-daemon", "usr/lib/softu2f/system-daemon", "755"]
]
depends = "$auto, systemd, u2f-hidraw-policy"
extended-description = """Provides a socket interface for unprivileged users to create emulated Universal 2nd Factor
devices. By default expects to be run via systemd as root and passed a socket file-descriptor to listen on."""
maintainer-scripts = "maintainer-scripts"
