[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "tokio-linux-uhid"
version = "0.4.2"
edition = "2021"
description = "Tokio-based interface to Linux UHID (user-space HID transport drivers)"
license = "MIT"

[dependencies]
bitflags = "1.1.0"
bytes = "1.1.0"
futures = "0.3.17"
thiserror = "1.0"
tokio = { version = "1.13.0", features = ["fs", "net", "io-util"] }
tokio-util = { version = "0.6", features = ["codec"] }
uhid-sys = { path = "../uhid-sys" }
tracing = "0.1"
