[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "softu2f-user-daemon"
version = "0.3.2"

[dependencies]
dirs = "1.0"
futures = "0.1.20"
futures-cpupool = "0.1.8"
lazy_static = "1.0.0"
notify-rust = "3.4.2"
serde = "1.0.36"
serde_derive = "1.0.36"
serde_json = "1.0.13"
slog = "2.2.3"
slog-term = "2.3.0"
time = "0.1.39"
tokio-core = "0.1.16"
tokio-io = "0.1.6"
tokio-serde-bincode = "0.1.1"
tokio-uds = "0.1.7"

[dependencies.softu2f-system-daemon]
path = "../system-daemon"

[dependencies.u2f-core]
path = "../../u2f-core"

[dependencies.u2fhid-protocol]
path = "../../u2fhid-protocol"

[dev-dependencies]
tempdir = "0.3.7"

[package.metadata.deb]
assets = [
    ["softu2f.service", "usr/lib/systemd/user/", "644"],
    ["softu2f.preset", "usr/lib/systemd/user-preset/95-softu2f.preset", "644"],
    ["../target/release/softu2f-user-daemon", "usr/libexec/softu2f/user-daemon", "755"]
]
depends = "softu2f-system-daemon, systemd, dbus-user-session, $auto"
extended-description = "A systemd daemon that provides a socket interface for unprivileged users to create emulated U2F devices."
maintainer-scripts = "maintainer-scripts"
