[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "softu2f-user-daemon"
version = "0.4.1"

[dependencies]
base64 = "0.10.1"
bincode = "1.1.4"
clap = "2.33.0"
dirs = "2.0.2"
directories = "2.0.2"
failure = "0.1.5"
futures = "0.1.28"
futures-cpupool = "0.1.8"
lazy_static = "1.3.0"
notify-rust = "3.6.2"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
slog = { version = "2.5.2", features = ["max_level_debug", "release_max_level_info" ] }
slog-term = "2.4.1"
time = "0.1.42"
secret-service = "1.0.0"
tokio-core = "0.1.17"
tokio-io = "0.1.12"
tokio-serde-bincode = "0.2.1"
tokio-uds = "0.2.5"
quick-error = "1.2.1"

[dependencies.softu2f-system-daemon]
path = "../system-daemon"

[dependencies.u2f-core]
path = "../../u2f-core"

[dependencies.u2fhid-protocol]
path = "../../u2fhid-protocol"

[dev-dependencies]
tempdir = "0.3.7"

[package.metadata.deb]
assets = [
    ["softu2f.service", "usr/lib/systemd/user/", "644"],
    ["softu2f.preset", "usr/lib/systemd/user-preset/95-softu2f.preset", "644"],
    ["../target/release/softu2f-user-daemon", "usr/libexec/softu2f/user-daemon", "755"]
]
depends = "softu2f-system-daemon, systemd, dbus-user-session, $auto"
extended-description = "A systemd daemon that provides a socket interface for unprivileged users to create emulated U2F devices."
maintainer-scripts = "maintainer-scripts"
