[package]
authors = ["Daniel Stiner <danstiner@gmail.com>"]
name = "softu2f-user-daemon"
version = "0.5.0"
edition = "2021"

[dependencies]
async-trait = "^0.1.51"
base64 = "^0.13.0"
bincode = "^1.1.4"
clap = "4.0.18"
directories = "^4.0.1"
dirs = "^4.0.0"
futures = "^0.3.17"
futures-cpupool = "^0.1.8"
lazy_static = "^1.3.0"
libsystemd = "0.5.0"
notify-rust = "^4.5.5"
pin-project = "^1.0"
secret-service = "^2.0.1"
serde = "^1.0.99"
serde_derive = "^1.0.99"
serde_json = "^1.0.40"
thiserror = "^1.0"
tokio = { version = "^1.15.0", features = ["full"] }
tokio-serde = { version = "^0.8", features = ["bincode"] }
tokio-util = { version = "0.7.1", features = ["full"] }
tracing = { version = "^0.1", features = ["release_max_level_debug"] }
tracing-journald = "0.3.0"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
uuid = "^1.0"

[dependencies.ctap-hid]
path = "../../ctap-hid"

[dependencies.fido2-api]
path = "../../fido2-api"

[dependencies.fido2-service]
path = "../../fido2-service"

[dependencies.softu2f-system-daemon]
path = "../system-daemon"

[dependencies.u2f-core]
path = "../../u2f-core"

[dev-dependencies]
tempdir = "0.3.7"

[package.metadata.deb]
assets = [
    [
        "softu2f.service",
        "usr/lib/systemd/user/",
        "644",
    ],
    [
        "softu2f.preset",
        "usr/lib/systemd/user-preset/95-softu2f.preset",
        "644",
    ],
    [
        "../../target/release/softu2f-user-daemon",
        "usr/libexec/softu2f/user-daemon",
        "755",
    ],
]
depends = "softu2f-system-daemon, systemd, dbus-user-session, $auto"
extended-description = "A systemd daemon that provides a socket interface for unprivileged users to create emulated U2F devices."
maintainer-scripts = "maintainer-scripts"
